test/files/neg/t0207.check
t0207.scala:3: error: type T takes type parameters
  type S = (T with T)[A]
            ^
t0207.scala:3: error: type T takes type parameters
  type S = (T with T)[A]
                   ^
2 errors
